2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Also match uppercase "F" for fortran
	globs, fixes #10692. Thanks to Quintin Hill <quintinhill@gmx.net>

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Change top-level tag matching offset range
	of XML subtypes from "0:64" to "0:256". Fixes #10880. Thanks to
	Sebastian Dröge <slomo@circular-chaos.org>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add Erlang source code MIME type, fixes
	#10878. Thanks to Martin Ankerl <martin.ankerl@gmail.com>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add ".hxx" glob pattern for C++ header.
	Fixes #10872. Thanks to Jonathon Jongsma <jonathon.jongsma@gmail.com>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add SIS/SISX packages, #10871.
	* update-mime-database.c: Add x-epoc media type.
	Thanks to Ville Skyttä <ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* Makefile.am: Install shared-mime-info.pc to $libdir/pkgconfig
	instead of $datadir/pkgconfig, #10698. Thanks to Tilman Sauerbeck
	<tilman@code-monkey.de>.
	* autogen.sh: Don't run libtoolize, #10870. Thanks to Ville Skyttä
	<ville.skytta@iki.fi>.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add more WordPerfect globs, #10428. Thanks
	to Petr Mladek <pmladek@suse.cz>.
	Also replace "document" by "image" in EMF/WMF description.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix WMF description and add matchlet, add
	EMF MIME type. Fixes #11385 and 11388. Thanks to Shaun Oldale
	<soldale@gmail.com>.
	Also fix OpenOffice Calc template description.

2007-06-26  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add MP2 audio, add more aliases for 3GPP, fixes
	#10457. Thanks to Matt Keenan <matt.keenan@sun.com>.
